# kinfu_remake

./: CMakeLists.txt
apps/: CMakeLists.txt  demo_bin.cpp
kfusion/: CMakeLists.txt
kfusion/include/io/: azure_kinect_grabber.hpp  bin_grabber.hpp
kfusion/src/: azure_kinect_grabber.cpp  bin_grabber.cpp  internal.hpp  kinfu.cpp
kfusion/src/cuda/: device.hpp
